<resources>
    <string name="app_name">Movies Watch</string>
    <string name="pexels_com">Pictures taken from pexels.com</string>
    <string name="menu">Menu</string>
    <string name="favorites">Favorites</string>
    <string name="watch_later">Watch later</string>
    <string name="collections">Collections</string>
    <string name="settings">Settings</string>
    <string name="topBarTitle">Search It!</string>
    <string name="DescriptionError">There was an error occurred!</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="radio_group_title">Selection on the main screen:</string>
    <string name="radio_button_popular">Popular</string>
    <string name="radio_button_top_rated">Top rated</string>
    <string name="radio_button_soon">Soon</string>
    <string name="radio_button_now_playing">Playing in cinemas</string>
    <string name="settings_title">Choose app theme:</string>
    <string name="radio_button_light_theme">Light Theme</string>
    <string name="radio_button_dark_theme">Dark Theme</string>
    <string name="permission_storage">No permission. Please grant permission.</string>
    <string name="downloaded_to_gallery">Saved to gallery</string>
    <string name="open">To gallery</string>

</resources>